--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "devops",
   "version": "1.0.0",
-  "description": "",
+  "description": "Implement CI/CD with Github Actions.",
   "main": "index.js",
   "scripts": {
     "test": "jest",
@@ -17,7 +17,7 @@
     "webpack-cli": "^3.3.11"
   },
   "dependencies": {
-    "firebase-tools": "^7.16.2",
+    "firebase-tools": "^13.7.4",
     "terser": "^4.6.6"
   }
 }
